--- a/misc/index.qmd
+++ b/misc/index.qmd
@@ -2,11 +2,11 @@
 
 <table border="0">
   <tr>
-    <td valign="top">**Conference/Workshop Reviewer:**&nbsp;&nbsp;&nbsp;&nbsp; </td>
+    <td valign="top">Conference/workshop reviewer:&emsp;&emsp; </td>
     <td>[XAI4CV](https://xai4cv.github.io/) (workshop @ CVPR), 2024<br />[MICCAI](https://conferences.miccai.org/2024/en/default.asp), 2024<br />[FAIMI](https://faimi-workshop.github.io/2024-miccai/) (workshop @ MICCAI), 2024<br />[eXCV](https://excv-workshop.github.io/) (workshop @ ECCV), 2024</td>
   </tr>
   <tr>
-    <td valign="top">**Student Project Supervisor:** </td>
+    <td valign="top">Student project co-supervision: </td>
     <td>V. Olesen, Master's level special course: Hidden Bias in Chest X-ray, 2023<br />
     S. Sterlie, Bachelor thesis: Gender Bias in Big Language Models, 2023<br />
     K. B. Ulbæk, Master's level special course: Automatic Label Denoising, 2023<br />
@@ -14,7 +14,7 @@
     </td>
   </tr>
   <tr>
-    <td valign="top">**Teaching Assistant:** </td>
+    <td valign="top">Teaching assistant: </td>
     <td>[Deep Learning](https://kurser.dtu.dk/course/02456), DTU, 2023 fall<br />
     [Responsible AI](https://kurser.dtu.dk/course/02517), DTU, 2024 spring
     </td>
