--- a/index.qmd
+++ b/index.qmd
@@ -32,7 +32,10 @@ I am a second year PhD student working on Algorithmic Fairness in Medical Imagin
 My research topics include bias assessment and reasoning, counterfactual generation, shortcut learning detection, and bias mitigation. I aim to build fair, transparent, trustworthy, and responsible AI tools. 
 
 ### News
-- **Aug, 2024**. Our paper, [*Fast Diffusion-Based Counterfactuals for Shortcut Removal and Generation*](https://fastdime.compute.dtu.dk/), has been accepted for an *oral presentation* at [ECCV](https://eccv.ecva.net/)! After a long journey filled with ups and downs, it’s incredibly rewarding to see our work recognized (so far a bit) by the conference community. Can not wait to present and have (hopefully many!) interesting discussions in Milan this September 🍕
+- **Mar, 2025**. I started my external research stay at the [University of Luzern](https://www.unilu.ch/en/)! I will be supervised by [Christian F. Baumgartner](https://baumgach.github.io/) and work with his team. This is my second time living in Switzerland—what a destiny! :)
+- **Oct, 2024**. [Manxi](https://scholar.google.com/citations?user=RApnUsEAAAAJ&hl=da) and I presented our paper [*Shortcut Learning in Medical Image Segmentation*](https://link.springer.com/chapter/10.1007/978-3-031-72111-3_59) at MICCAI 2024 in Morocco. Together with Aasa, Tareen and many others, we also successfully organized the [FAIMI](https://faimi-workshop.github.io/2024-miccai/) workshop (again;) there. <br /> 
+This is the first time MICCAI was held in Africa -- a milestone worth celebrating. Yet, knowing that only 40 out of 2,869 papers were submitted by Africa-based institutes was a stark reminder of the deep global disparities in research participation. Progress toward true inclusivity in science is still a long, long journey to go..
+- **Sep, 2024**. Our paper, [*Fast Diffusion-Based Counterfactuals for Shortcut Removal and Generation*](https://fastdime.compute.dtu.dk/) (co-first-author with [Paraskevas](https://scholar.google.com/citations?user=LVACmX4AAAAJ&hl=en)), has been accepted for an *oral presentation* at [ECCV](https://eccv.ecva.net/)! After a long journey filled with ups and downs, it’s incredibly rewarding to see our work recognized (so far a bit) by the conference community. Can not wait to present and have (hopefully many!) interesting discussions in Milan this September 🍕
 - **Aug, 2024**. After [more than one-year's procrastination](./img/news/pw_pro.png), I finally recreated my personal webpage (this one!). I used [Quarto](https://quarto.org/) to build it -- it's incredibly simple and includes the function to integrate code into the blogs, which I’m looking forward to trying out in a near (!) future.
 
 
